Fixed equals method
Fixed equals method when object o is deque then should pass the class checker